discussion/kv_engine/177017/177017_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Simplify FlowControl locking mechanism

The FlowControl bufferSize and pendingControl members are strictly
related, as any change to the first requires the Consumer sending a
control message to the Producer for informing the latter of the new
FlowControl setup.

Here I replace the manual locking/unlocking and pair-updates of those
members with a folly::Synchronized<T>, where T is a class that embeds
the pair-updates internally. That makes the FlowControl state update
cleaner.

Change-Id: I1e320f74894f92bb381fad82ba3b6deeb2229d08

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-04 07:54:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 08:35:38.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18583/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:105:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("total_acked_bytes", ackedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:108:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("unacked_bytes", freedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.h:93:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<Buffer> buffer;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18583/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:105:18:
error: no matching member function for call to "addStat" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18583/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39795/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control.h:93:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39795/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20467/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonYes_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonYes_SnappyNo_AlwaysBufferYes
[2022-07-04T07:59:39.171Z] unknown file: Failure
[2022-07-04T07:59:39.171Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":13,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-04T07:59:39.171Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonYes_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrNo, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (617 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonYes_SnappyNo_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20467/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21457/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20816/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20816/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17734/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8254/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28848/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8354/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19692/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
